# learning

./: .gitignore  .zshrc  styles.md
polymarket_dashboard/: docker-compose.yml  pyproject.toml
polymarket_dashboard/data/: binance_ws_response.py  polymarket_ws_response.py
polymarket_dashboard/deployment/: Dockerfile  docker-compose.yml
polymarket_dashboard/examples/: fan_in.ipynb  run_create_drop_table.py  run_simple_query_db_insert.py  utils.ipynb
polymarket_dashboard/notes/: MVCC - hate.md  asyncio.md  docker.md  docker_under_the_hood.md  indexing_and_partitioning.md  map_reduce.md  notes_implementation.md  scaling_postgre_to_800mil_users.md
polymarket_dashboard/src/: main.py  main_news.py  main_ohlcv.py
polymarket_dashboard/src/config/: logger.py  types.py
polymarket_dashboard/src/db/: ingest_stream.py  queries.py
polymarket_dashboard/src/examples/: fan_in.ipynb  run_create_drop_table.py  run_simple_query_db_insert.py  utils.ipynb
polymarket_dashboard/src/polymarket_dashboard/src/api/: main.py
polymarket_dashboard/src/polymarket_dashboard/src/config/: db_config.py  enum.py  interface.py  logger.py  models.py  paths.py  query.py  table_config.py  types.py
polymarket_dashboard/src/polymarket_dashboard/src/db/: execute_query.py  extract.py  ingest_news.ipynb  ingest_news.py  ingest_ohlcv.py  ingest_stream.py  run_query_http.py
polymarket_dashboard/src/polymarket_dashboard/src/news/: base.py  binance.py  bybit.py
polymarket_dashboard/src/polymarket_dashboard/src/ohlcv/: ccxt_ohlcv.py
polymarket_dashboard/src/polymarket_dashboard/src/polymarket_api/: add_asset_id.py  list_events.json  list_markets.json  parse_events.py  request_events.py  test.ipynb
polymarket_dashboard/src/polymarket_dashboard/src/stream/: _binance.py  binance.py  polymarket.py
polymarket_dashboard/src/polymarket_dashboard/src/streamlit/: experiments.ipynb  experiments.py
polymarket_dashboard/src/stream/: _binance.py  binance.py  polymarket.py
polymarket_dashboard/src/transform/: __init__.py  binance.py  parse_message.py  polymarket.py  polymarket_parser.ipynb  router.py
(+44 files in other folders)
