[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "polymarket_dashboard"
version = "0.1.0"
description = "Your package description"
authors = [{ name = "VP54", email = "vp@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# Only the dependencies you actually need
dependencies = [
    "requests==2.32.5",
    "numpy==2.4.2",
    "questdb==4.1.0",
    "polars==1.34",
    "plotly==6.1.0",
    "streamlit==1.47.0",
    "streamlit-autorefresh==1.0.1",
    "ccxt==4.5.39",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "fastapi[standard]==0.133.1",
    "uvicorn[standard]==0.41.0",
    "python-dotenv==1.2.1",

]

# Packages to include in your distribution
packages = [{ include = "polymarket_dashboard", from = "src" }]

[ruff.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E501", "E701", "E722"]
unfixable = ["B"]